force-app/main/default/objects/Product__c/fields/Azimuth__c.field-meta.xml
<CustomField>
    <fullName>Azimuth__c</fullName>
    <label>Azimuth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>