force-app/main/default/objects/Product__c/fields/Backup_Power__c.field-meta.xml
<CustomField>
    <fullName>Backup_Power__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup Power</label>
    <type>Checkbox</type>
</CustomField>