force-app/main/default/objects/Product__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost of Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>