force-app/main/default/objects/Product__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created</label>
    <type>Date</type>
</CustomField>