force-app/main/default/objects/Product__c/fields/Energy_kWh_DC__c.field-meta.xml
<CustomField>
    <fullName>Energy_kWh_DC__c</fullName>
    <label>Energy (kWh-DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>