force-app/main/default/objects/Product__c/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <label>Manufacture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alarm.com</fullName>
            </value>
            <value>
                <fullName>Ameriflow</fullName>
            </value>
            <value>
                <fullName>CFA Cabinetry</fullName>
            </value>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>Energy Shield</fullName>
            </value>
            <value>
                <fullName>Flowwall</fullName>
            </value>
            <value>
                <fullName>Hague</fullName>
            </value>
            <value>
                <fullName>Kwikset</fullName>
            </value>
            <value>
                <fullName>Mohawk</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>Premier Custom Coating</fullName>
            </value>
            <value>
                <fullName>Qolsys</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Sonos</fullName>
            </value>
            <value>
                <fullName>Stone Quarry</fullName>
            </value>
            <value>
                <fullName>Simon</fullName>
            </value>
            <value>
                <fullName>Ring</fullName>
            </value>
            <value>
                <fullName>Z-Wave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>