force-app/main/default/objects/Product__c/fields/Max_power_rating_watts__c.field-meta.xml
<CustomField>
    <fullName>Max_power_rating_watts__c</fullName>
    <label>Max power rating (watts)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>