force-app/main/default/objects/Product__c/fields/Nameplate_rating_kW_AC__c.field-meta.xml
<CustomField>
    <fullName>Nameplate_rating_kW_AC__c</fullName>
    <label>Nameplate rating (kW-AC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>