force-app/main/default/objects/Product__c/fields/Power_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Power_kW_DC__c</fullName>
    <label>Power (kW-DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>