force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blinds &amp; Shutters</fullName>
            </value>
            <value>
                <fullName>Carpet &amp; Tile Cleaning</fullName>
            </value>
            <value>
                <fullName>Doors &amp; Windows</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Energy Efficiencies</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Garage Door</fullName>
            </value>
            <value>
                <fullName>Garage Floor Coating</fullName>
            </value>
            <value>
                <fullName>Garage Organization</fullName>
            </value>
            <value>
                <fullName>Handy Man</fullName>
            </value>
            <value>
                <fullName>Home Automation</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Internet-Cable-Satellite</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath Remodel</fullName>
            </value>
            <value>
                <fullName>Landscape Design</fullName>
            </value>
            <value>
                <fullName>Landscape Maintenance</fullName>
            </value>
            <value>
                <fullName>Lock Smith</fullName>
            </value>
            <value>
                <fullName>Maid Service</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Pool Install</fullName>
            </value>
            <value>
                <fullName>Pool Maintenance</fullName>
            </value>
            <value>
                <fullName>Remodel</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Security Doors</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>