force-app/main/default/objects/Product__c/fields/Remodel_Category__c.field-meta.xml
<CustomField>
    <fullName>Remodel_Category__c</fullName>
    <label>Remodel Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DESIGN,PLANS, &amp; PERMITS</fullName>
            </value>
            <value>
                <fullName>TEAR-OUT</fullName>
            </value>
            <value>
                <fullName>EXCAVATION</fullName>
            </value>
            <value>
                <fullName>CONCRETE</fullName>
            </value>
            <value>
                <fullName>MASONRY</fullName>
            </value>
            <value>
                <fullName>FLOOR FRAMING</fullName>
            </value>
            <value>
                <fullName>WALL FRAMING</fullName>
            </value>
            <value>
                <fullName>ROOF FRAMING</fullName>
            </value>
            <value>
                <fullName>ROOFING &amp; FLASHING</fullName>
            </value>
            <value>
                <fullName>CARPET</fullName>
            </value>
            <value>
                <fullName>BATHROOMS</fullName>
            </value>
            <value>
                <fullName>EXT. DOORS, &amp; WINDOWS</fullName>
            </value>
            <value>
                <fullName>PLUMBING &amp; WATER FILTRATION</fullName>
            </value>
            <value>
                <fullName>HEATING &amp; COOLING</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL</fullName>
            </value>
            <value>
                <fullName>INSULATION &amp; SOLAR</fullName>
            </value>
            <value>
                <fullName>DRYWALL</fullName>
            </value>
            <value>
                <fullName>HARDSCAPES</fullName>
            </value>
            <value>
                <fullName>INT. DOORS &amp; TRIM</fullName>
            </value>
            <value>
                <fullName>KITCHEN CABINETS</fullName>
            </value>
            <value>
                <fullName>GARAGE CABINETS &amp; EPOXY</fullName>
            </value>
            <value>
                <fullName>FLOORING &amp; BACKSPLASH</fullName>
            </value>
            <value>
                <fullName>PAINTING</fullName>
            </value>
            <value>
                <fullName>COUNTERTOPS</fullName>
            </value>
            <value>
                <fullName>WINDOW COVERINGS</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>Demand Management System</fullName>
            </value>
            <value>
                <fullName>Battery Storage</fullName>
            </value>
            <value>
                <fullName>Battery Inverter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>