force-app/main/default/objects/Product__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service</label>
    <type>Checkbox</type>
</CustomField>