force-app/main/default/objects/Product__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>Demand Management System</fullName>
            </value>
            <value>
                <fullName>Battery Storage</fullName>
            </value>
            <value>
                <fullName>Battery Inverter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>