force-app/main/default/objects/Product__c/fields/Suggested_Retail_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Retail_Pricing_Method__c</fullName>
    <label>Suggested Retail Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Driven</fullName>
            </value>
            <value>
                <fullName>Payment Driven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>