force-app/main/default/objects/Product__c/fields/Suggested_Retail_with_Installation__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Retail_with_Installation__c</fullName>
    <formula>Installation_Cost__c + Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suggested Retail with Installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>