force-app/main/default/objects/Product__c/fields/Tilt__c.field-meta.xml
<CustomField>
    <fullName>Tilt__c</fullName>
    <label>Tilt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>