force-app/main/default/objects/Product__c/fields/Unit_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Total_Cost__c</fullName>
    <formula>Cost__c +  Installation_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>