force-app/main/default/objects/Product__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>