force-app/main/default/objects/Product__c/validationRules/Commission_Amount_and_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Amount_and_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>Commission_Amount__c &gt; 0 &amp;&amp;  Commission__c  &gt; 0</errorConditionFormula>
    <errorDisplayField>Commission__c</errorDisplayField>
    <errorMessage>You must add one commission parameter.</errorMessage>
</ValidationRule>