force-app/main/default/objects/Product__c/listViews/Countertops.listView-meta.xml
<ListView>
    <fullName>Countertops</fullName>
    <columns>NAME</columns>
    <columns>UOM__c</columns>
    <columns>Remodel_Category__c</columns>
    <columns>Cost__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>active__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Suggested_Retail_with_Installation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remodel_Category__c</field>
        <operation>equals</operation>
        <value>COUNTERTOPS</value>
    </filters>
    <filters>
        <field>active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Countertops</label>
</ListView>