force-app/main/default/objects/Product__c/listViews/Design_Planning_Permits.listView-meta.xml
<ListView>
    <fullName>Design_Planning_Permits</fullName>
    <columns>Remodel_Category__c</columns>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>active__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Suggested_Retail_with_Installation__c</columns>
    <columns>Service__c</columns>
    <columns>Taxable__c</columns>
    <columns>UOM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Design</value>
    </filters>
    <filters>
        <field>active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Design, Planning &amp; Permits</label>
</ListView>