force-app/main/default/objects/Product__c/listViews/Doors_and_Windows.listView-meta.xml
<ListView>
    <fullName>Doors_and_Windows</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Remodel_Category__c</columns>
    <columns>Cost__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>active__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Suggested_Retail_with_Installation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Doors &amp; Windows,Window,Windows &amp; Doors</value>
    </filters>
    <filters>
        <field>active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Remodel_Category__c</field>
        <operation>equals</operation>
    </filters>
    <label>Doors and Windows</label>
</ListView>