force-app/main/default/objects/Product__c/listViews/Excavation.listView-meta.xml
<ListView>
    <fullName>Excavation</fullName>
    <columns>NAME</columns>
    <columns>Remodel_Category__c</columns>
    <columns>Cost__c</columns>
    <columns>Sales_Price__c</columns>
    <columns>Installation_Cost__c</columns>
    <columns>active__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Suggested_Retail_with_Installation__c</columns>
    <columns>UOM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>equals</operation>
        <value>Excavation</value>
    </filters>
    <filters>
        <field>active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Excavation</label>
</ListView>